--- a/webDemo/Statistics/templates/Statistics/plot.html
+++ b/webDemo/Statistics/templates/Statistics/plot.html
@@ -174,7 +174,7 @@
           <form method="post" enctype="multipart/form-data">
               {% csrf_token %}
               {{ file_form.as_p }}
-              <button type="submit" class="pure-button pure-button-primary">Upload</button>
+              <button type="submit" class="pure-button pure-button-primary">Run</button>
           </form>
       </div>
       {% endif %}
@@ -200,10 +200,10 @@
                       </div>
                             <div class="img-comp-container"; align="right">
                             <div class="img-comp-img">
-                                <img src="{% static 'Statistics/biceps/Recon_long.png' %}" alt="GANFormed1" style="width:600px;">
+                                <img src="{% static 'Statistics/biceps/Recon_long.png' %}" alt="GANFormed" style="width:600px;">
                             </div>
                             <div class="img-comp-img img-comp-overlay">
-                                <img src="{% static 'Statistics/biceps/Label_long.png' %}" alt="Original1" style="width:600px;">
+                                <img src="{% static 'Statistics/biceps/Label_long.png' %}" alt="Original" style="width:600px;">
                             </div>
                           </div>
 
@@ -214,10 +214,10 @@
                       </div>
                             <div class="img-comp-container"; align="right">
                             <div class="img-comp-img">
-                                <img src="{% static 'Statistics/biceps/Recon_trans.png' %}" alt="GANFormed1" style="width:600px;">
+                                <img src="{% static 'Statistics/biceps/Recon_trans.png' %}" alt="GANFormed" style="width:600px;">
                             </div>
                             <div class="img-comp-img img-comp-overlay">
-                                <img src="{% static 'Statistics/biceps/Label_trans.png' %}" alt="Original1" style="width:600px;">
+                                <img src="{% static 'Statistics/biceps/Label_trans.png' %}" alt="Original" style="width:600px;">
                             </div>
                           </div>
 
@@ -330,6 +330,47 @@
                           <script>
                               initComparisons();
                           </script>
+                        </td>
+                    </tr>
+                </tbody>
+
+            </table>
+      {% endif %}
+
+      {% if img_nr == 9 %}
+       <div class="header" style="background-color:#57565A;text-align:center">
+              <form method="post" enctype="multipart/form-data">
+              {% csrf_token %}
+              {{ file_form.as_p }}
+              <button type="submit" class="pure-button pure-button-primary">Run</button>
+          </form>
+      </div>
+            <table class="pure-table"; align="center">
+                <thead>
+                    <tr>
+                        <th align="center">Delay and Sum vs GANFormed</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                    <tr>
+                      <td>
+                      <div class="pure-img">
+                        <img src="{% static 'Statistics/RecImg.png' %}" alt="Bicubic" style="width:600px;height:1px">
+                      </div>
+                            <div class="img-comp-container"; align="right">
+                            <div class="img-comp-img">
+                                <img src="{% static 'Statistics/tmp/ganformed.png' %}" alt="GANFormed" style="width:600px;">
+                            </div>
+                            <div class="img-comp-img img-comp-overlay">
+                                <img src="{% static 'Statistics/tmp/dasformed.png' %}" alt="Original" style="width:600px;">
+                            </div>
+                          </div>
+                          <script>
+                              initComparisons();
+                          </script>
+
                         </td>
                     </tr>
                 </tbody>
